kubernetes-networks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: homework-2
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        command: ["/bin/sh"]
        args: ["-c", "sed -i 's/80/8000/' /etc/nginx/conf.d/default.conf && ln -sf /homework/* /usr/share/nginx/html && nginx -g 'daemon off;'"]
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - name: workdir
          mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm -f /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      nodeSelector:
        homework: "true"
      volumes:
      - name: workdir
        emptyDir: {}
