kubernetes-networks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /homepage
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /index.html
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 80
